src/tests/snapshots/cargo_vet__tests__certify__mock-delta-git-certify-flow.snap
---
source: src/tests/certify.rs
expression: result
---
OUTPUT:
<<<EDITING VET_CERTIFY>>>
# Please read the following criteria and then follow the instructions below:

# === BEGIN CRITERIA "safe-to-deploy" ===
#
# This crate will not introduce a serious security vulnerability to production
# software exposed to untrusted input.
#
# Auditors are not required to perform a full logic review of the entire crate.
# Rather, they must review enough to fully reason about the behavior of all unsafe
# blocks and usage of powerful imports. For any reasonable usage of the crate in
# real-world software, an attacker must not be able to manipulate the runtime
# behavior of these sections in an exploitable or surprising way.
#
# Ideally, all unsafe code is fully sound, and ambient capabilities (e.g.
# filesystem access) are hardened against manipulation and consistent with the
# advertised behavior of the crate. However, some discretion is permitted. In such
# cases, the nature of the discretion should be recorded in the `notes` field of
# the audit record.
#
# For crates which generate deployed code (e.g. build dependencies or procedural
# macros), reasonable usage of the crate should output code which meets the above
# criteria.
#
# === END CRITERIA ===
#
# Uncomment the following statement:

# I, testing, certify that I have audited the changes from version 10.0.0 to 10.0.0@git:00112233445566778899aabbccddeeff00112233 of third-party1 in accordance with the above criteria.

# Add any notes about your audit below this line:


<<<EDIT OK>>>
I, testing, certify that I have audited the changes from version 10.0.0 to 10.0.0@git:00112233445566778899aabbccddeeff00112233 of third-party1 in accordance with the above criteria.

These are testing notes. They contain some
newlines. Trailing whitespace        
    and leading whitespace


<<<END EDIT>>>

AUDITS:

[criteria.fuzzed]
description = "fuzzed"

[criteria.reviewed]
description = "reviewed"
implies = "weak-reviewed"

[criteria.strong-reviewed]
description = "strongly reviewed"
implies = "reviewed"

[criteria.weak-reviewed]
description = "weakly reviewed"

[[audits.third-party1]]
who = "testing"
criteria = "safe-to-deploy"
delta = "10.0.0 -> 10.0.0@git:00112233445566778899aabbccddeeff00112233"
importable = false
notes = """
These are testing notes. They contain some
newlines. Trailing whitespace
    and leading whitespace
"""

