src/tests/snapshots/cargo_vet__tests__certify__mock-simple-certify-flow.snap
---
source: src/tests/certify.rs
expression: result
---
OUTPUT:
<<<CLEAR SCREEN>>>
choose criteria to certify for third-party1:10.0.0
  0. <clear selections>
  1. fuzzed
  2. reviewed
  3. strong-reviewed
  4. weak-reviewed
  5. safe-to-deploy
  6. safe-to-run

current selection: ["reviewed"]
(press ENTER to accept the current criteria)
> 

<<<EDITING VET_CERTIFY>>>
# Please read the following criteria and then follow the instructions below:

# === BEGIN CRITERIA "reviewed" ===
#
# reviewed
#
# === END CRITERIA ===
#
# Uncomment the following statement:

# I, testing, certify that I have audited version 10.0.0 of third-party1 in accordance with the above criteria.

# Add any notes about your audit below this line:


<<<EDIT OK>>>
I, testing, certify that I have audited version 10.0.0 of third-party1 in accordance with the above criteria.

These are testing notes. They contain some
newlines. Trailing whitespace        
    and leading whitespace


<<<END EDIT>>>

AUDITS:

[criteria.fuzzed]
description = "fuzzed"

[criteria.reviewed]
description = "reviewed"
implies = "weak-reviewed"

[criteria.strong-reviewed]
description = "strongly reviewed"
implies = "reviewed"

[criteria.weak-reviewed]
description = "weakly reviewed"

[[audits.third-party1]]
who = "testing"
criteria = "reviewed"
version = "10.0.0"
notes = """
These are testing notes. They contain some
newlines. Trailing whitespace
    and leading whitespace
"""

