src/tests/snapshots/cargo_vet__tests__certify__mock_trust_flow_all_allow_multiple.snap
---
source: src/tests/certify.rs
expression: result
---
OUTPUT:
<<<CLEAR SCREEN>>>
choose trusted criteria for packages published by testuser (third-party1, third-party2, and 1 other)
  1. safe-to-run
  2. safe-to-deploy
  3. fuzzed
  4. reviewed
  5. strong-reviewed
  6. weak-reviewed

current selection: ["reviewed"]
(press ENTER to accept the current criteria)
> 


AUDITS:

[criteria.fuzzed]
description = "fuzzed"

[criteria.reviewed]
description = "reviewed"
implies = "weak-reviewed"

[criteria.strong-reviewed]
description = "strongly reviewed"
implies = "reviewed"

[criteria.weak-reviewed]
description = "weakly reviewed"

[audits]

[[trusted.third-party1]]
criteria = "reviewed"
user-id = 2 # Test user (testuser)
start = "2022-12-12"
end = "2024-01-01"

[[trusted.third-party2]]
criteria = "reviewed"
user-id = 2 # Test user (testuser)
start = "2022-12-12"
end = "2024-01-01"

[[trusted.transitive-third-party1]]
criteria = "reviewed"
user-id = 2 # Test user (testuser)
start = "2022-10-12"
end = "2024-01-01"

