src/tests/snapshots/cargo_vet__tests__certify__mock_wildcard_certify_flow.snap
---
source: src/tests/certify.rs
expression: result
---
OUTPUT:
<<<CLEAR SCREEN>>>
choose criteria to certify for third-party1:*
  0. <clear selections>
  1. safe-to-run
  2. safe-to-deploy
  3. fuzzed
  4. reviewed
  5. strong-reviewed
  6. weak-reviewed

current selection: ["safe-to-deploy"]
(press ENTER to accept the current criteria)
> 

<<<EDITING VET_CERTIFY>>>
# Please read the following criteria and then follow the instructions below:

# === BEGIN CRITERIA "safe-to-deploy" ===
#
# This crate will not introduce a serious security vulnerability to production
# software exposed to untrusted input.
#
# Auditors are not required to perform a full logic review of the entire crate.
# Rather, they must review enough to fully reason about the behavior of all unsafe
# blocks and usage of powerful imports. For any reasonable usage of the crate in
# real-world software, an attacker must not be able to manipulate the runtime
# behavior of these sections in an exploitable or surprising way.
#
# Ideally, all unsafe code is fully sound, and ambient capabilities (e.g.
# filesystem access) are hardened against manipulation and consistent with the
# advertised behavior of the crate. However, some discretion is permitted. In such
# cases, the nature of the discretion should be recorded in the `notes` field of
# the audit record.
#
# For crates which generate deployed code (e.g. build dependencies or procedural
# macros), reasonable usage of the crate should output code which meets the above
# criteria.
#
# === END CRITERIA ===
#
# Uncomment the following statement:

# I, testing, certify that any version of third-party1 published by 'testuser' between 2022-12-12 and 2024-01-01 will satisfy the above criteria.

# Add any notes about your audit below this line:


<<<EDIT OK>>>
I, testing, certify that any version of third-party1 published by 'testuser' between 2022-12-12 and 2024-01-01 will satisfy the above criteria.

These are testing notes. They contain some
newlines. Trailing whitespace        
    and leading whitespace


<<<END EDIT>>>

AUDITS:

[criteria.fuzzed]
description = "fuzzed"

[criteria.reviewed]
description = "reviewed"
implies = "weak-reviewed"

[criteria.strong-reviewed]
description = "strongly reviewed"
implies = "reviewed"

[criteria.weak-reviewed]
description = "weakly reviewed"

[[wildcard-audits.third-party1]]
who = "testing"
criteria = "safe-to-deploy"
user-id = 2
start = "2022-12-12"
end = "2024-01-01"
notes = """
These are testing notes. They contain some
newlines. Trailing whitespace
    and leading whitespace
"""

[audits]

